Fix bug. Chmod cannot be redirected...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ docker-build:
     - apk add openssh-client
     - mkdir ~/.ssh
     - echo "$PRIV_KEY" > ~/.ssh/id_rsa
-    - chmod 600 > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
     - chmod 700 ~/.ssh
     - eval "$(ssh-agent -s)"
 
