--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-docker-build-master:
+build-master:
   # Official docker image.
   image: docker:latest
   stage: build
@@ -12,7 +12,7 @@ docker-build-master:
   only:
     - master
 
-docker-build:
+build:
   # Official docker image.
   image: docker:latest
   stage: build
