Use sudo for specific command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy-eu:
     - ssh-keyscan -t rsa $HOST_EU > ~/.ssh/known_hosts
     - >
       ssh deployer@$HOST_EU "
-      eu/echo/sbin/update
+      sudo eu/echo/sbin/update
       "
   dependencies:
     - docker-build-master
