Make sure we find dependencies
    Have a direct dependency on websocketpp.
    This is a header only library but make sure CMake finds this dependency correctly.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.2)
 project(cppecho)
+
 set(SOURCE_FILES main.cpp)
 add_executable(server ${SOURCE_FILES})
+
+find_path(WEBSOCKSETS_INCLUDE_DIR NAMES websocketpp/server.hpp)
+target_include_directories(server PRIVATE ${WEBSOCKSETS_INCLUDE_DIR})
+
 install(TARGETS server DESTINATION ${SERVER_INSTALL_BIN_DIR})
