--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "include/ThorsHammer"]
 	path = include/ThorsHammer
-	url = git@github.com:Loki-Astari/ThorsHammer.git
+	url = https://github.com/Loki-Astari/ThorsHammer.git
