--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "include/ThorsHammer"]
 	path = include/ThorsHammer
 	url = https://github.com/Loki-Astari/ThorsHammer.git
+
+[submodule "include/websocketpp"]
+        path = include/websocketpp
+        url = https://github.com/zaphoyd/websocketpp.git
