--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ project(cppecho)
 set(SOURCE_FILES main.cpp)
 add_executable(server ${SOURCE_FILES})
 
+set(WEBSOCKSETS_INCLUDE_DIR ${SERVER_INSTALL_INCLUDE_DIR}/websocketpp)
 find_path(WEBSOCKSETS_INCLUDE_DIR NAMES websocketpp/server.hpp)
 target_include_directories(server PRIVATE ${WEBSOCKSETS_INCLUDE_DIR})
 
