--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,8 @@ set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 set(SERVER_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(SERVER_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
 
+# Something is broken with Libboost on Debian & Ubuntu.
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
 add_subdirectory(src)
 
