--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "include/websocketpp"]
 	path = include/websocketpp
 	url = https://github.com/zaphoyd/websocketpp.git
+[submodule "include/json"]
+	path = include/json
+	url = https://github.com/nlohmann/json.git
