Add JWT internal support, cli arguments and warning if no JWT key specified.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "include/json"]
 	path = include/json
 	url = https://github.com/nlohmann/json.git
+[submodule "include/jwt"]
+	path = include/jwt
+	url = https://github.com/Thalhammer/jwt-cpp.git
