--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,14 @@ project(cppecho)
 set(SOURCE_FILES main.cpp)
 add_executable(server ${SOURCE_FILES})
 
+# OpenSSL
+set(OPENSSL_USE_STATIC_LIBS TRUE)
+find_package(OpenSSL REQUIRED)
+
 set(WEBSOCKSETS_INCLUDE_DIR ${SERVER_INSTALL_INCLUDE_DIR}/websocketpp)
 find_path(WEBSOCKSETS_INCLUDE_DIR NAMES websocketpp/server.hpp)
 target_include_directories(server PRIVATE ${WEBSOCKSETS_INCLUDE_DIR})
-target_link_libraries(server PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(server PRIVATE nlohmann_json::nlohmann_json OpenSSL::Crypto -ldl)
 set(JWT_INCLUDE_DIR ${SERVER_INSTALL_INCLUDE_DIR}/jwt/include)
 find_path(JWT_INCLUDE_DIR NAMES jwt-cpp/jwt.hpp)
 target_include_directories(server PRIVATE ${JWT_INCLUDE_DIR})
